DataCalculator/force-app/main/default/objects/Parent__c/Parent__c.object-meta.xml
<CustomObject>
    <description>custom Object to store parent records</description>
    <label>Parent</label>
    <nameField>
        <label>Parent Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Parents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>