DataCalculator/force-app/main/default/objects/Parent__c/fields/Child_Values__c.field-meta.xml
<CustomField>
    <fullName>Child_Values__c</fullName>
    <label>Child Values</label>
    <type>TextArea</type>
</CustomField>